feat: Reworking architecture to use a GitHub worker
